2004-10-29  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add INCLUDED_LIBGC automake conditional.

2004-10-24  Jonathan Pryor <jonpryor@vt.edu>

	* man/mono.1: Add documentation for the MONO_TRACE environment variable.

2004-10-14  Joe Shaw  <joeshaw@novell.com>

	* man/mono.1: Fix the syntax of the M: trace syntax

2004-10-10  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add some checks for cygwin weirdness.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* support/Makefile.am (libMonoPosixHelper_la_SOURCES): Do not build
	zlib_macros if zlib.h is not found.

	* configure.in: Add check for zlib.h.

2004-09-28  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* mini-s390.c: Fix AND_IMM/OR_IMM/DIV_IMM/REM_IMM

2004-09-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am ($(tmpinst)/bin/pedump): New.
	(mcs-do-run-test-profiles): Depend on it.

2004-09-27  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mono-do-testjit): New target, unused for now.  Runs
	the mono testsuite in tests/.
	(tmpinst-dir): Create etc/mono/2.0.
	($(tmpinst)/bin/ilasm, $(tmpinst)/etc/mono/2.0/machine.config): New.

2004-09-21 Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* configure.in: Cater for S/390 on Linux

2004-09-21    <vargaz@freemail.hu>

	* configure.in: Link with ole32 on windows.

2004-09-20  Jackson Harper  <jackson@ximian.com>

	* support/map.c/h: Add poll events map functions. Use values
	instead of names for defines.
	
2004-09-17  Martin Baulig  <martin@ximian.com>

	* Makefile.am (mcs-do-compiler-tests): Reverted Raja's latest
	change in this target.

2004-09-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (mcs-do-full-build): Pass NO_SIGN_ASSEMBLIES=yes to
	reduce the number of passes.  We will get the assemblies signed in
	the 'populate-runtime-subdir' phase.
	(mcs-do-run-test-profiles): Rename from mcs-do-run-tests.  Use
	'test-profiles' to test all profiles.