@@ -1,3 +1,7 @@
+2004-10-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* man/mono.1: documented MONO_THREADS_PER_CPU.
+
 2004-10-29  Zoltan Varga  <vargaz@freemail.hu>
 
 	* configure.in: Add INCLUDED_LIBGC automake conditional.
